client game logic 완성

--- a/views/game.jade
+++ b/views/game.jade
@@ -15,38 +15,4 @@ html
     script(src='/js/my.js')
   body
     #page1(data-role='page')
-      div(data-theme='', data-role='header')
-        h5
-          | Stage 3
-      div(data-role='content')
-        div(style='')
-          img(style='width: 290px; height: 290px;', src='http://assets.codiqa.com/IGZtsOUZT9SsEbcIBFX7_bank.png')
-        a(data-role='button', href='#page1')
-          | TODO
-        .ui-grid-d
-          .ui-block-a
-            div
-              p(style='text-align: center;', data-mce-style='text-align: center;')
-                  span(style='background-color: yellow; font-size: x-large;', data-mce-style='background-color: yellow; font-size: x-large;')
-                    span(style='color: #000000;', data-mce-style='color: #000000;')
-                    | B
-                    span#_mce_caret(data-mce-bogus='true')
-          .ui-block-b
-            div
-              p(style='text-align: center;', data-mce-style='text-align: center;')
-                  span(style='background-color: yellow; font-size: x-large;', data-mce-style='background-color: yellow; font-size: x-large;')
-                    span(style='color: #000000;', data-mce-style='color: #000000;')
-                    | B
-                    span#_mce_caret(data-mce-bogus='true')
-          .ui-block-c
-          .ui-block-d
-          .ui-block-e
-          .ui-block-a
-          .ui-block-b
-          .ui-block-c
-          .ui-block-d
-          .ui-block-e
-      div(data-theme='a', data-role='footer', data-position='fixed')
-        h3
-          | Footer
-
+      | Hello World
