--- a/views/game.jade
+++ b/views/game.jade
@@ -14,48 +14,95 @@ html
     script(src='/socket.io/socket.io.js')
     script(src='/js/my.js')
     script
-        App = {};
-        update_board = function() {
-            $('#board').prepend($('<div class="dd dd-handle">').html('<span></span> &nbsp;<span style="color:red"></span> says : <span style="color:green"></span>'));
+        var App = {};
+        var server = 'http://192.168.0.2:5000';
+
+        update_board = function(name, trial) {
+            $('#board').prepend($('<div class="dd dd-handle">').html('<span></span> &nbsp;<span style="color:orange"></span> says : <span style="color:green"></span>'));
             $('#board span').eq(0).html(App['num_try']++);
-            $('#board span').eq(1).html('Name');
-            $('#board span').eq(2).html('TEST');
+            $('#board span').eq(1).html(name);
+            $('#board span').eq(2).html(trial);
+
+            var trials = $('#board div');
+            for(var i=5; i< trials.length; i++) {
+                trials.remove();
+            }
+        }
+        show_message = function(type) {
+            $('.message').css('top', '-78px');
+            $('.' + type).animate({top:"0"}, 500);
+            setTimeout(function() {$('.' + type).animate({top: "-78"}, 500);}, 2000);
+        }
+        get_quiz = function() {
+            App['num_try'] = 1;
+            $.getJSON(server + '/quiz?callback=?', null, function(data){
+                if (data.quiz) { 
+                    $('#stage').html('Stage ' + data.stage);
+                    image = $('#quiz_pic');
+                    image.fadeOut('fast', function () {
+                        image.attr('src', server + '/images/quiz/'+data.quiz+'.jpg');
+                        image.fadeIn('slow');
+                    });
+
+                    $('#answer span').remove();
+                    for (var i=0; i < data.quiz.length; i++) {
+                        $('#answer').append($('<span style="display: inline-block; width:30px; height:30px; background:white; margin-right:10px; font-size:x-large">').html('_'));
+                    }
+                } else {
+                    var image;
+                    $('#stage').html('Stage Completed');
+                    image = $('#quiz_pic');
+                    image.fadeOut('fast', function () {
+                        image.attr('src', server + '/images/end.jpg');
+                        image.fadeIn('slow');
+                    });
+                    $('#alphabets span').css('background', 'gray');
+                    $('#alphabets span').off('click');
+                }
+            });
         }
         $(function(){
             App['num_try'] = 1;
+            get_quiz();
         });
   body
     #page1(data-role='page')
       div(data-theme='a', data-role='header')
-        h5
+        h5#stage
           | Stage   
       div(data-role='content')
         .split-wrapper
           .content-secondary(style='text-align:center;margin-top:15px')
-            #quiz-pic
-              img(src='/images/end.jpg')
-          .content-primary#playlist
+            img#quiz_pic
+          .content-primary
             ul(data-role='listview', data-divider-theme='a', data-inset='true')
                 li(data-role='list-divider', role='heading')
                  | Ranking
-                li.ui-li.ui-li-static.ui-btn-up-c.ui-li-has-thumb(data-theme='a')#first
+                li.ui-li.ui-li-static.ui-btn-up-c.ui-li-has-thumb(data-theme='a')#ranking0
                    img.ui-li-thumb(src='/images/1st.jpg', alt='Thumbnail')
                    h3.ui-li-heading Waiting
                    h5.ui-li-heading 맞춘 문제 : 
                      span 0
-                li.ui-li.ui-li-static.ui-btn-up-c.ui-li-has-thumb(data-theme='c')#second
+                li.ui-li.ui-li-static.ui-btn-up-c.ui-li-has-thumb(data-theme='a')#ranking1
                    img.ui-li-thumb(src='/images/2nd.jpg', alt='Thumbnail')
                    h3.ui-li-heading Waiting
                    h5.ui-li-heading 맞춘 문제 : 
                      span 0
-                li.ui-li.ui-li-static.ui-btn-up-c.ui-li-has-thumb(data-theme='c')#third
+                li.ui-li.ui-li-static.ui-btn-up-c.ui-li-has-thumb(data-theme='a')#ranking2
                    img.ui-li-thumb(src='/images/3rd.jpg', alt='Thumbnail')
                    h3.ui-li-heading Waiting
                    h5.ui-li-heading 맞춘 문제 : 
                      span 0
             #board
- 
+      #answer(style="text-align:center;margin-top:50px")
       div(data-theme='a', data-role='footer', data-position='fixed')
         h2
           p(style="text-decoration:underline;color:orange;") CODE: #{code}
           p Powered by Realtime Relay Server (a.k.a Vu:Talk )
+      div.info.message(style="top: -78px;")
+        h3
+          span(style="color:orange")
+            | James 
+          |  solve this quiz.
+        p
+          | Let's move on to the next problem in 2 seconds.
