--- a/views/game.jade
+++ b/views/game.jade
@@ -15,8 +15,8 @@ html
     script(src='/js/my.js')
     script
         var App = {};
-        var server = 'http://weword.herokuapp.com:80';
-        //var server = 'http://192.168.0.2:5000'
+        //var server = 'http://weword.herokuapp.com:80';
+        var server = 'http://192.168.0.2:5000'
 
         update_board = function(name, trial) {
             $('#board').prepend($('<div class="dd dd-handle">').html('<span></span> &nbsp;<span style="color:orange"></span> says : <span style="color:red"></span>'));
@@ -29,8 +29,8 @@ html
             }
 
             var trials = $('#board div');
-            for(var i=5; i< trials.length; i++) {
-                trials.remove();
+            for(var i=3; i< trials.length; i++) {
+                trials.eq(i).remove();
             }
         }
         show_message = function(type) {
@@ -76,7 +76,7 @@ html
         h5#stage
           | Stage   
       div(style="background-image: url(/images/word_wall.jpg); border: 1px solid black;")
-          div(data-role='content')
+          div(data-role='content', style="height:430px")
             .split-wrapper
               .content-secondary(style='text-align:center;margin-top:15px')
                 img#quiz_pic(style="width:400px; height:400px")
