server 주소 변경 (local -> heroku)

--- a/views/game.jade
+++ b/views/game.jade
@@ -15,8 +15,8 @@ html
     script(src='/js/my.js')
     script
         var App = {};
-        //var server = 'http://weword.herokuapp.com:80';
-        var server = 'http://192.168.0.2:5000'
+        var server = 'http://weword.herokuapp.com:80';
+        //var server = 'http://192.168.0.2:5000'
 
         update_board = function(name, trial) {
             $('#board').prepend($('<div class="dd dd-handle">').html('<span></span> &nbsp;<span style="color:orange"></span> says : <span style="color:red"></span>'));
